--- a/08_project_management_essentials/section.tex
+++ b/08_project_management_essentials/section.tex
@@ -324,17 +324,17 @@ This register will be very important during 2nd semester and during the presenta
 
 There are numerous sources that impact the cost and level of resource required for a project. In this exercise, we want to broaden your understanding of what cost means to a project and where it might come from.
 
-During\marginnote{Suppliers} your design work, you have been looking at supplier catalogues for potential sources of components. In this exercise, you will be solely focusing on the price of the components they offer but in a large organisation there are additional costs incurred such as contracts, stakeholder engagement, logistics and the resolving of issues if components are not to specification. 
+During\marginnote{suppliers} your design work, you have been looking at supplier catalogues for potential sources of components. In this exercise, you will be solely focusing on the price of the components they offer but in a large organisation there are additional costs incurred such as contracts, stakeholder engagement, logistics and the resolving of issues if components are not to specification. 
 
-For\marginnote{Raw Materials} each component you will be manufacturing in-house, there is a cost associated with the raw materials that you will be purchasing. As with the stock market, raw materials prices can change on a regular basis based on supply and demand at the time. Thus, large organisations often have to hedge and buy material in advance to have security that the material will be available to them but this also comes at an additional cost.
+For\marginnote{raw materials} each component you will be manufacturing in-house, there is a cost associated with the raw materials that you will be purchasing. As with the stock market, raw materials prices can change on a regular basis based on supply and demand at the time. Thus, large organisations often have to hedge and buy material in advance to have security that the material will be available to them but this also comes at an additional cost.
 
-This\marginnote{Machining} is the cost of manufacturing the components that you have designed. In this project, you have looked at the time to machine a single prototype component but in production projects there are additional costs such as those relating to the maintenance of the machines, cost of tooling (drill bits, dies, coolant) and energy/facility use.
+This\marginnote{machining} is the cost of manufacturing the components that you have designed. In this project, you have looked at the time to machine a single prototype component but in production projects there are additional costs such as those relating to the maintenance of the machines, cost of tooling (drill bits, dies, coolant) and energy/facility use.
 
-In\marginnote{Assembly} addition to machining, there is the cost of assembly, which you have been analysing during the design of your product. Again, there would be additional costs in the facilities required for this assembly line to function and the need to store components before and after assembly.
+In\marginnote{assembly} addition to machining, there is the cost of assembly, which you have been analysing during the design of your product. Again, there would be additional costs in the facilities required for this assembly line to function and the need to store components before and after assembly.
 
-Then\marginnote{Human Resources} there is the human resource involved in the project and this is covers all the time spent designing, manufacturing and the cost of the personnel that need to be involved, which features pay scales, national insurance contributions, holiday entitlements and pensions to name a few. All these are factored into an engineers' hourly rate when being costed to projects.
+Then\marginnote{human resources} there is the human resource involved in the project and this is covers all the time spent designing, manufacturing and the cost of the personnel that need to be involved, which features pay scales, national insurance contributions, holiday entitlements and pensions to name a few. All these are factored into an engineers' hourly rate when being costed to projects.
 
-In\marginnote{Currency Exchange Rates} large organisations, the currency exchange rates can play a huge factor in to revenue and cost modelling of projects. This is where companies have order books looking ahead 20 years and predictions have to be made on the price the quote and the future cost. One example of the consequence of exchanges rates is Rolls-Royce having to write-down \textsterling2bn after the brexit vote due to the dip in the pound.\cite{tovey2016}
+In\marginnote{currency exchange rates} large organisations, the currency exchange rates can play a huge factor in to revenue and cost modelling of projects. This is where companies have order books looking ahead 20 years and predictions have to be made on the price the quote and the future cost. One example of the consequence of exchanges rates is Rolls-Royce having to write-down \textsterling2bn after the brexit vote due to the dip in the pound.\cite{tovey2016}
 
 The list could continue and include:
 
